@@ -15,6 +15,7 @@ Changes/New Features:
 
 CAY-2884 Upgrade gradle to 8.13
 CAY-2893 Update velocity-engine-core dependency
+CAY-2897 Add no-op default implementations to the GraphChangeHandler interface
 
 Bug Fixes:
 
